实现基于串口的通信展示

--- a/Tactile-Viewer/index.html
+++ b/Tactile-Viewer/index.html
@@ -11,6 +11,8 @@
   <div id="app">
     <header>
       <div class="brand">GLB + Tactile Demo</div>
+      <!-- ================== BUG修复：添加缺失的连接按钮 ================== -->
+      <button id="btnConnect" class="btn">连接设备</button>
       <label class="btn">选择GLB
         <input id="file" type="file" accept=".glb,.gltf,model/gltf-binary,model/gltf+json" />
       </label>
